# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\V1\Auth\RegisterController;
 use App\Http\Controllers\Api\V1\CategoryController;
+use App\Http\Controllers\Api\V1\ProductController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -19,4 +20,6 @@ Route::prefix('v1')->group(function () {
     Route::post('register', RegisterController::class)->name('api.v1.auth.register');
     Route::get('categories', [CategoryController::class, 'index'])->name('api.v1.categories.index');
     Route::get('categories/{slug}', [CategoryController::class, 'show'])->name('api.v1.categories.show');
+    Route::get('products/{slug}', [ProductController::class, 'show'])
+        ->name('api.v1.products.show');
 });
